EPAD8-2387: Fix alignment of follow widget flag link

--- a/services/drupal/web/modules/custom/epa_workflow/css/epa-follow-widget.css
+++ b/services/drupal/web/modules/custom/epa_workflow/css/epa-follow-widget.css
@@ -20,8 +20,7 @@
   display: block;
   font-size: 1rem;
   line-height: 1.5;
-  padding: 0.75rem;
-  text-align: center;
+  padding: 0.75rem 1.5rem;
   text-decoration: none;
 
   &:hover,
